Decoupled mcp server configs